Wed Sep 22 08:48:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_svh.cpp:
        * TAO_IDL/be/be_visitor_component/component_svs.cpp:
        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
        * TAO_IDL/be/be_visitor_component_scope.cpp:
        * TAO_IDL/be/be_visitor_home/home_svh.cpp:
        * TAO_IDL/be/be_visitor_home/home_svs.cpp:
          Use Session_Container in the entry points

Wed Sep 22 08:55:44 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * examples/Advanced/ch_18/run_test.pl:
          Corrected an error during rename action.

Wed Sep 22 08:50:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
        * TAO-INSTALL.html:
        * examples/Advanced/ch_18/run_test.pl:
        * examples/Callback_Quoter/run_test.pl:
        * examples/Quoter/run_test.pl:
        * examples/RTCORBA/Activity/run_test.pl:
        * examples/RTScheduling/Fixed_Priority_Scheduler/run_test.pl:
        * examples/RTScheduling/MIF_Scheduler/run_test.pl:
        * examples/ior_corbaloc/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/OMG_Basic/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/OMG_SupplierSideEC/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/OMG_TypedEC/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Basic/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Federated/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_Filter/run_test.pl:
        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/run_test.pl:
        * orbsvcs/DevGuideExamples/NamingService/Messenger/run_test.pl:
        * orbsvcs/DevGuideExamples/NamingService/Naming_Client/run_test.pl: