@@ -189,7 +189,7 @@ bgcolor="#ffffff">
       <LI>Dump_Schedule/tao_dump_schedule</LI>
       <LI>LifeCycle_Service/tao_coslifecycle</LI>
       <LI>LoadBalancer</LI>
-      <LI>CosEvent_Service</LI>
+      <LI>CosEvent_Service/tao_cosevent</LI>
       <LI>Event_Service</LI>
       <LI>FTRT_Event_Service</LI>
       <LI>FTRT_Event_Service</LI>
