@@ -335,7 +335,7 @@ $ $TAO_ROOT/orbsvcs/Naming_Service/Naming_Service -m 1
     <P>The CORBA Event Service
     </P>
 <PRE>
-$ $TAO_ROOT/orbsvcs/CosEvent_Service/CosEvent_Service
+$ $TAO_ROOT/orbsvcs/CosEvent_Service/tao_cosevent
 </PRE>
 
     <P>Now you can run your client:
