@@ -2,5 +2,5 @@
 // $Id$
 
 project : orbsvcsexe, install, naming, event_serv, svc_utils, iortable, messaging_optional, portableserver {
-  exename  = CosEvent_Service
+  exename  = tao_cosevent
 }
